// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBackgroundStyles Get correct block background styles for color layer different values for border on different responsive stages and hovers 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {
        "border-bottom-style": "solid",
        "border-bottom-width": "15px",
        "border-color": "rgba(var(--maxi-light-color-5,0,0,0),1)",
        "border-left-style": "solid",
        "border-left-width": "20px",
        "border-right-style": "solid",
        "border-right-width": "10px",
        "border-top-style": "solid",
        "border-top-width": "5px",
      },
      "l": Object {
        "border-bottom-width": "20px",
        "border-left-width": "5px",
        "border-right-width": "15px",
        "border-top-width": "10px",
      },
      "m": Object {
        "border-left-width": "0px",
        "border-top-width": "0px",
      },
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
    "size": Object {
      "g": Object {
        "bottom": "-15px",
        "left": "-20px",
        "right": "-10px",
        "top": "-5px",
      },
      "l": Object {
        "bottom": "-20px",
        "left": "-5px",
        "right": "-15px",
        "top": "-10px",
      },
      "m": Object {
        "left": "0px",
        "top": "0px",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__1": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),1)",
        "display": "block",
        "width": "100%",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),1)",
        "width": "100%",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),1)",
        "width": "100%",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),1)",
        "width": "100%",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),1)",
        "width": "100%",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),1)",
        "width": "100%",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),1)",
        "width": "100%",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for color layer with border 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {
        "border-bottom-left-radius": "180px",
        "border-bottom-right-radius": "180px",
        "border-bottom-style": "solid",
        "border-bottom-width": "2px",
        "border-color": "rgba(var(--maxi-light-color-5,0,0,0),1)",
        "border-left-style": "solid",
        "border-left-width": "2px",
        "border-right-style": "solid",
        "border-right-width": "2px",
        "border-top-left-radius": "180px",
        "border-top-right-radius": "180px",
        "border-top-style": "solid",
        "border-top-width": "2px",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
    "size": Object {
      "g": Object {
        "bottom": "-2px",
        "left": "-2px",
        "right": "-2px",
        "top": "-2px",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for color layer with border radius and row border radius 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {
        "border-bottom-left-radius": "160px",
        "border-bottom-right-radius": "200px",
        "border-top-left-radius": "182px",
        "border-top-right-radius": "183px",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for color layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "bottom": "10%",
        "display": "block",
        "height": "100px",
        "left": "10%",
        "right": "10%",
        "top": "10%",
        "width": "100px",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),0.3)",
        "bottom": "13%",
        "height": "103px",
        "left": "13%",
        "right": "13%",
        "top": "13%",
        "width": "103px",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-5,0,0,0),0.59)",
        "bottom": "14%",
        "height": "104px",
        "left": "14%",
        "right": "14%",
        "top": "14%",
        "width": "104px",
      },
      "s": Object {
        "background-color": "rgba(204,68,68,0.59)",
        "bottom": "15%",
        "height": "105px",
        "left": "15%",
        "right": "15%",
        "top": "15%",
        "width": "105px",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "bottom": "12%",
        "height": "102px",
        "left": "12%",
        "right": "12%",
        "top": "12%",
        "width": "102px",
      },
      "xs": Object {
        "background-color": "rgba(204,68,68,0.59)",
        "bottom": "16%",
        "height": "106px",
        "left": "16%",
        "right": "16%",
        "top": "16%",
        "width": "106px",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-2,242,249,253),0.2)",
        "bottom": "11%",
        "height": "101px",
        "left": "11%",
        "right": "11%",
        "top": "11%",
        "width": "101px",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for color layer with different values on different responsive stages and hover 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "bottom": "10%",
        "display": "block",
        "height": "100px",
        "left": "10%",
        "right": "10%",
        "top": "10%",
        "width": "100px",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),0.3)",
        "bottom": "13%",
        "height": "103px",
        "left": "13%",
        "right": "13%",
        "top": "13%",
        "width": "103px",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-5,0,0,0),0.59)",
        "bottom": "14%",
        "height": "104px",
        "left": "14%",
        "right": "14%",
        "top": "14%",
        "width": "104px",
      },
      "s": Object {
        "background-color": "rgba(204,68,68,0.59)",
        "bottom": "15%",
        "height": "105px",
        "left": "15%",
        "right": "15%",
        "top": "15%",
        "width": "105px",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "bottom": "12%",
        "height": "102px",
        "left": "12%",
        "right": "12%",
        "top": "12%",
        "width": "102px",
      },
      "xs": Object {
        "background-color": "rgba(204,68,68,0.59)",
        "bottom": "16%",
        "height": "106px",
        "left": "16%",
        "right": "16%",
        "top": "16%",
        "width": "106px",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-2,242,249,253),0.2)",
        "bottom": "11%",
        "height": "101px",
        "left": "11%",
        "right": "11%",
        "top": "11%",
        "width": "101px",
      },
    },
  },
  "maxi-test:hover > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test:hover > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),0.59)",
        "bottom": "11%",
        "height": "101px",
        "left": "11%",
        "right": "11%",
        "top": "11%",
        "width": "101px",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.59)",
        "bottom": "14%",
        "height": "104px",
        "left": "14%",
        "right": "14%",
        "top": "14%",
        "width": "104px",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.59)",
        "bottom": "15%",
        "height": "105px",
        "left": "15%",
        "right": "15%",
        "top": "15%",
        "width": "105px",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-8,150,176,203),0.59)",
        "bottom": "16%",
        "height": "106px",
        "left": "16%",
        "right": "16%",
        "top": "16%",
        "width": "106px",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),0.59)",
        "bottom": "13%",
        "height": "103px",
        "left": "13%",
        "right": "13%",
        "top": "13%",
        "width": "103px",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-8,150,176,203),0.59)",
        "bottom": "17%",
        "height": "107px",
        "left": "17%",
        "right": "17%",
        "top": "17%",
        "width": "107px",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-7,8,18,25),0.22)",
        "bottom": "12%",
        "height": "102px",
        "left": "12%",
        "right": "12%",
        "top": "12%",
        "width": "102px",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for color layer with row border radius 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {
        "border-bottom-left-radius": "181px",
        "border-bottom-right-radius": "182px",
        "border-top-left-radius": "183px",
        "border-top-right-radius": "184px",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for different layers, onces created on normal and other on hover 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__2": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3": Object {
    "shape": Object {
      "g": Object {
        "bottom": "10px",
        "display": "block",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "l": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "label": "Background layer wrapper",
      "m": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "s": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "xl": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "xs": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "xxl": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3 > svg:first-child": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3 > svg:first-child pattern image": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3 svg *": Object {
    "shape": Object {
      "g": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
      "label": "Icon background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4": Object {
    "video": Object {
      "g": Object {
        "display": "block",
        "opacity": 1,
      },
      "l": Object {
        "opacity": 1,
      },
      "label": "Video Background",
      "m": Object {
        "opacity": 1,
      },
      "s": Object {
        "opacity": 1,
      },
      "xl": Object {
        "opacity": 1,
      },
      "xs": Object {
        "opacity": 1,
      },
      "xxl": Object {
        "opacity": 1,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for g responsive stage 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__1": Object {
    "image": Object {
      "g": Object {
        "bottom": "10px",
        "display": "block",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "l": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "label": "Background layer wrapper",
      "m": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "s": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "xl": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "xs": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "xxl": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__2": Object {
    "video": Object {
      "g": Object {
        "display": "block",
        "opacity": 1,
      },
      "l": Object {
        "opacity": 1,
      },
      "label": "Video Background",
      "m": Object {
        "opacity": 1,
      },
      "s": Object {
        "opacity": 1,
      },
      "xl": Object {
        "opacity": 1,
      },
      "xs": Object {
        "opacity": 1,
      },
      "xxl": Object {
        "opacity": 1,
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3": Object {
    "gradient": Object {
      "g": Object {
        "display": "block",
      },
      "l": Object {},
      "label": "Background gradient",
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4": Object {
    "shape": Object {
      "g": Object {
        "display": "block",
        "width": "100%",
      },
      "l": Object {
        "width": "100%",
      },
      "label": "Background layer wrapper",
      "m": Object {
        "width": "100%",
      },
      "s": Object {
        "width": "100%",
      },
      "xl": Object {
        "width": "100%",
      },
      "xs": Object {
        "width": "100%",
      },
      "xxl": Object {
        "width": "100%",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4 > svg:first-child": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4 > svg:first-child pattern image": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4 svg *": Object {
    "shape": Object {
      "g": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "label": "Icon background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for general responsive stage 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__1": Object {
    "image": Object {
      "g": Object {
        "bottom": "10px",
        "display": "block",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "l": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "label": "Background layer wrapper",
      "m": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "s": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "xl": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "xs": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
      "xxl": Object {
        "bottom": "10px",
        "height": "100%",
        "left": "10px",
        "right": "10px",
        "top": "10px",
        "width": "100%",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__2": Object {
    "video": Object {
      "g": Object {
        "display": "block",
        "opacity": 1,
      },
      "l": Object {
        "opacity": 1,
      },
      "label": "Video Background",
      "m": Object {
        "opacity": 1,
      },
      "s": Object {
        "opacity": 1,
      },
      "xl": Object {
        "opacity": 1,
      },
      "xs": Object {
        "opacity": 1,
      },
      "xxl": Object {
        "opacity": 1,
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3": Object {
    "gradient": Object {
      "g": Object {
        "display": "block",
      },
      "l": Object {},
      "label": "Background gradient",
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4": Object {
    "shape": Object {
      "g": Object {
        "display": "block",
        "width": "100%",
      },
      "l": Object {
        "width": "100%",
      },
      "label": "Background layer wrapper",
      "m": Object {
        "width": "100%",
      },
      "s": Object {
        "width": "100%",
      },
      "xl": Object {
        "width": "100%",
      },
      "xs": Object {
        "width": "100%",
      },
      "xxl": Object {
        "width": "100%",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4 > svg:first-child": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4 > svg:first-child pattern image": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4 svg *": Object {
    "shape": Object {
      "g": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "label": "Icon background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for gradient layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "gradient": Object {
      "g": Object {
        "background": "radial-gradient(rgba(6,147,227,0.15) 0%,rgba(68,150,185,0.15) 52%,rgba(155,81,224,0.15) 100%)",
        "display": "block",
      },
      "l": Object {
        "background": "radial-gradient(rgba(6,147,227,0.8) 0%,rgba(89,121,135,0.8) 29%,rgba(68,150,185,0.8) 52%,rgba(155,81,224,0.8) 100%)",
      },
      "label": "Background gradient",
      "m": Object {
        "background": "radial-gradient(rgba(6,147,227,0.8) 0%,rgba(89,121,135,0.8) 29%,rgba(68,150,185,0.8) 52%,rgba(155,81,224,0.8) 100%)",
      },
      "s": Object {
        "background": "radial-gradient(rgba(6,147,227,0.17) 0%,rgba(89,121,135,0.17) 29%,rgba(68,150,185,0.17) 52%,rgba(118,170,192,0.17) 76%,rgba(155,81,224,0.17) 100%)",
      },
      "xl": Object {
        "background": "radial-gradient(rgba(6,147,227,0.15) 0%,rgba(68,150,185,0.15) 52%,rgba(155,81,224,0.15) 100%)",
      },
      "xs": Object {
        "background": "radial-gradient(rgba(6,147,227,0.17) 0%,rgba(89,121,135,0.17) 29%,rgba(68,150,185,0.17) 52%,rgba(118,170,192,0.17) 76%,rgba(155,81,224,0.17) 100%)",
      },
      "xxl": Object {
        "background": "radial-gradient(rgba(6,147,227,0.48) 0%,rgba(68,150,185,0.48) 52%,rgba(155,81,224,0.48) 100%)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for gradient layer with different values on different responsive stages and hovers 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "gradient": Object {
      "g": Object {
        "background": "radial-gradient(rgba(6,147,227,0.15) 0%,rgba(68,150,185,0.15) 52%,rgba(155,81,224,0.15) 100%)",
        "bottom": "10%",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "display": "block",
        "height": "100px",
        "left": "10%",
        "right": "10%",
        "top": "10%",
        "width": "100px",
      },
      "l": Object {
        "background": "radial-gradient(rgba(6,147,227,0.8) 0%,rgba(89,121,135,0.8) 29%,rgba(68,150,185,0.8) 52%,rgba(155,81,224,0.8) 100%)",
        "bottom": "13%",
        "clip-path": "polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%)",
        "height": "103px",
        "left": "13%",
        "right": "13%",
        "top": "13%",
        "width": "103px",
      },
      "label": "Background layer wrapper",
      "m": Object {
        "background": "radial-gradient(rgba(6,147,227,0.8) 0%,rgba(89,121,135,0.8) 29%,rgba(68,150,185,0.8) 52%,rgba(155,81,224,0.8) 100%)",
        "bottom": "14%",
        "clip-path": "polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%)",
        "height": "104px",
        "left": "14%",
        "right": "14%",
        "top": "14%",
        "width": "104px",
      },
      "s": Object {
        "background": "radial-gradient(rgba(6,147,227,0.17) 0%,rgba(89,121,135,0.17) 29%,rgba(68,150,185,0.17) 52%,rgba(118,170,192,0.17) 76%,rgba(155,81,224,0.17) 100%)",
        "bottom": "15%",
        "clip-path": "polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%)",
        "height": "105px",
        "left": "15%",
        "right": "15%",
        "top": "15%",
        "width": "105px",
      },
      "xl": Object {
        "background": "radial-gradient(rgba(6,147,227,0.15) 0%,rgba(68,150,185,0.15) 52%,rgba(155,81,224,0.15) 100%)",
        "bottom": "12%",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "height": "102px",
        "left": "12%",
        "right": "12%",
        "top": "12%",
        "width": "102px",
      },
      "xs": Object {
        "background": "radial-gradient(rgba(6,147,227,0.17) 0%,rgba(89,121,135,0.17) 29%,rgba(68,150,185,0.17) 52%,rgba(118,170,192,0.17) 76%,rgba(155,81,224,0.17) 100%)",
        "bottom": "16%",
        "clip-path": "polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%)",
        "height": "106px",
        "left": "16%",
        "right": "16%",
        "top": "16%",
        "width": "106px",
      },
      "xxl": Object {
        "background": "radial-gradient(rgba(6,147,227,0.48) 0%,rgba(68,150,185,0.48) 52%,rgba(155,81,224,0.48) 100%)",
        "bottom": "11%",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
        "height": "101px",
        "left": "11%",
        "right": "11%",
        "top": "11%",
        "width": "101px",
      },
    },
  },
  "maxi-test:hover > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test:hover > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "gradient": Object {
      "g": Object {
        "background": "radial-gradient(rgba(26,229,6,0.71) 0%,rgba(186,69,107,0.71) 52%,rgba(224,218,82,0.71) 100%)",
        "bottom": "11%",
        "clip-path": "polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%)",
        "height": "101px",
        "left": "11%",
        "right": "11%",
        "top": "11%",
        "width": "101px",
      },
      "l": Object {
        "background": "radial-gradient(rgba(26,229,6,0.37) 0%,rgba(89,136,156,0.37) 25%,rgba(186,69,107,0.37) 52%,rgba(0,114,163,0.03) 74%,rgba(224,218,82,0.37) 100%)",
        "bottom": "14%",
        "clip-path": "circle(50% at 50% 50%)",
        "height": "104px",
        "left": "14%",
        "right": "14%",
        "top": "14%",
        "width": "104px",
      },
      "label": "Background layer wrapper",
      "m": Object {
        "background": "radial-gradient(rgba(26,229,6,0.37) 0%,rgba(89,136,156,0.37) 25%,rgba(186,69,107,0.37) 52%,rgba(0,114,163,0.03) 74%,rgba(224,218,82,0.37) 100%)",
        "bottom": "15%",
        "clip-path": "circle(50% at 50% 50%)",
        "height": "105px",
        "left": "15%",
        "right": "15%",
        "top": "15%",
        "width": "105px",
      },
      "s": Object {
        "background": "radial-gradient(rgba(186,69,107,0.91) 52%,rgba(0,114,163,0.07) 74%,rgba(224,218,82,0.91) 100%)",
        "bottom": "16%",
        "clip-path": "polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%)",
        "height": "106px",
        "left": "16%",
        "right": "16%",
        "top": "16%",
        "width": "106px",
      },
      "xl": Object {
        "background": "radial-gradient(rgba(26,229,6,0.71) 0%,rgba(186,69,107,0.71) 52%,rgba(224,218,82,0.71) 100%)",
        "bottom": "13%",
        "clip-path": "polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%)",
        "height": "103px",
        "left": "13%",
        "right": "13%",
        "top": "13%",
        "width": "103px",
      },
      "xs": Object {
        "background": "radial-gradient(rgba(186,69,107,0.91) 52%,rgba(0,114,163,0.07) 74%,rgba(224,218,82,0.91) 100%)",
        "bottom": "17%",
        "clip-path": "polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%)",
        "height": "107px",
        "left": "17%",
        "right": "17%",
        "top": "17%",
        "width": "107px",
      },
      "xxl": Object {
        "background": "linear-gradient(205deg,rgba(26,229,6,0.71) 0%,rgba(186,69,107,0.71) 52%,rgba(224,218,82,0.71) 100%)",
        "bottom": "12%",
        "clip-path": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
        "height": "102px",
        "left": "12%",
        "right": "12%",
        "top": "12%",
        "width": "102px",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for image layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "image": Object {
      "g": Object {
        "-webkit-transform": "translate3d(0,0,0)",
        "background-attachment": "local",
        "background-clip": "padding-box",
        "background-image": "url('http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg')",
        "background-origin": "border-box",
        "background-position": "left top",
        "background-repeat": "repeat-x",
        "background-size": "cover",
        "display": "block",
        "opacity": 0.52,
      },
      "l": Object {
        "background-attachment": "fixed",
        "background-clip": "padding-box",
        "background-origin": "content-box",
        "background-position": "right top",
        "background-repeat": "space",
        "background-size": "contain",
      },
      "label": "Background Image",
      "m": Object {
        "background-position": "right top",
        "background-size": "contain",
        "opacity": 0.91,
      },
      "s": Object {
        "background-attachment": "scroll",
        "background-position": "center top",
        "background-repeat": "repeat-x",
        "background-size": "contain",
      },
      "xl": Object {
        "background-attachment": "local",
        "background-clip": "padding-box",
        "background-origin": "border-box",
        "background-position": "left top",
        "background-repeat": "repeat-x",
        "background-size": "cover",
        "opacity": 0.52,
      },
      "xs": Object {
        "background-position": "center top",
        "background-size": "auto",
      },
      "xxl": Object {
        "background-position": "left top",
        "background-size": "cover",
        "opacity": 0.11,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for image layer with different values on different responsive stages and hovers 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "image": Object {
      "g": Object {
        "-webkit-transform": "translate3d(0,0,0)",
        "background-attachment": "local",
        "background-clip": "padding-box",
        "background-image": "url('http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg')",
        "background-origin": "border-box",
        "background-position": "left top",
        "background-repeat": "repeat-x",
        "background-size": "cover",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "display": "block",
        "opacity": 0.52,
      },
      "l": Object {
        "background-attachment": "fixed",
        "background-clip": "padding-box",
        "background-origin": "content-box",
        "background-position": "right top",
        "background-repeat": "space",
        "background-size": "contain",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
      },
      "label": "Background Image",
      "m": Object {
        "background-position": "right top",
        "background-size": "contain",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
        "opacity": 0.91,
      },
      "s": Object {
        "background-attachment": "scroll",
        "background-position": "center top",
        "background-repeat": "repeat-x",
        "background-size": "contain",
        "clip-path": "polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%)",
      },
      "xl": Object {
        "-webkit-transform": "translate3d(0,0,0)",
        "background-attachment": "local",
        "background-clip": "padding-box",
        "background-origin": "border-box",
        "background-position": "left top",
        "background-repeat": "repeat-x",
        "background-size": "cover",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "opacity": 0.52,
      },
      "xs": Object {
        "background-position": "center top",
        "background-size": "auto",
        "clip-path": "polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%)",
      },
      "xxl": Object {
        "-webkit-transform": "translate3d(0,0,0)",
        "background-position": "left top",
        "background-size": "cover",
        "clip-path": "polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%)",
        "opacity": 0.11,
      },
    },
  },
  "maxi-test:hover > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test:hover > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "image": Object {
      "g": Object {
        "background-attachment": "local",
        "background-clip": "padding-box",
        "background-image": "url('http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg')",
        "background-origin": "border-box",
        "background-position": "left top",
        "background-repeat": "repeat-x",
        "background-size": "cover",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
        "opacity": 0.17,
      },
      "l": Object {
        "background-position": "right top",
        "background-size": "contain",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
        "opacity": 0.81,
      },
      "label": "Background Image",
      "m": Object {
        "background-position": "right top",
        "background-size": "contain",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
      },
      "s": Object {
        "background-position": "center top",
        "background-size": "contain",
        "clip-path": "ellipse(25% 40% at 50% 50%)",
      },
      "xl": Object {
        "background-position": "left top",
        "background-size": "cover",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
        "opacity": 0.17,
      },
      "xs": Object {
        "background-position": "center top",
        "background-size": "auto",
        "clip-path": "ellipse(25% 40% at 50% 50%)",
      },
      "xxl": Object {
        "background-position": "left top",
        "background-size": "cover",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
        "opacity": 0.79,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for image layer with parallax and different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "image": Object {
      "g": Object {
        "display": "block",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 img": Object {
    "image": Object {
      "g": Object {
        "-webkit-transform": "translate3d(0,0,0)",
        "display": "block",
        "object-fit": "cover",
        "object-position": "left top",
        "opacity": 0.52,
      },
      "l": Object {
        "object-fit": "contain",
        "object-position": "right top",
      },
      "label": "Background Image",
      "m": Object {
        "object-fit": "contain",
        "object-position": "right top",
        "opacity": 0.91,
      },
      "s": Object {
        "object-fit": "contain",
        "object-position": "center top",
      },
      "xl": Object {
        "object-fit": "cover",
        "object-position": "left top",
        "opacity": 0.52,
      },
      "xs": Object {
        "object-fit": "auto",
        "object-position": "center top",
      },
      "xxl": Object {
        "object-fit": "cover",
        "object-position": "left top",
        "opacity": 0.11,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for shape layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "shape": Object {
      "g": Object {
        "bottom": "10%",
        "display": "block",
        "height": "100px",
        "left": "10%",
        "right": "10%",
        "top": "10%",
        "width": "100px",
      },
      "l": Object {
        "bottom": "13%",
        "height": "103px",
        "left": "13%",
        "right": "13%",
        "top": "13%",
        "width": "103px",
      },
      "label": "Background layer wrapper",
      "m": Object {
        "bottom": "14%",
        "height": "104px",
        "left": "14%",
        "right": "14%",
        "top": "14%",
        "width": "104px",
      },
      "s": Object {
        "bottom": "15%",
        "height": "105px",
        "left": "15%",
        "right": "15%",
        "top": "15%",
        "width": "105px",
      },
      "xl": Object {
        "bottom": "12%",
        "height": "102px",
        "left": "12%",
        "right": "12%",
        "top": "12%",
        "width": "102px",
      },
      "xs": Object {
        "bottom": "16%",
        "height": "106px",
        "left": "16%",
        "right": "16%",
        "top": "16%",
        "width": "106px",
      },
      "xxl": Object {
        "bottom": "11%",
        "height": "101px",
        "left": "11%",
        "right": "11%",
        "top": "11%",
        "width": "101px",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child": Object {
    "shape": Object {
      "g": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "l": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "m": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "s": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "xl": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "xs": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "xxl": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child pattern image": Object {
    "shape": Object {
      "g": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "l": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "m": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "s": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "xl": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "xs": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "xxl": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 svg *": Object {
    "shape": Object {
      "g": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-3,155,155,155),0.37)",
      },
      "label": "Icon background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-3,155,155,155),0.37)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-7,8,18,25),0.37)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-7,8,18,25),0.37)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-2,242,249,253),0.37)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for shape layer with different values on different responsive stages and hovers 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "shape": Object {
      "g": Object {
        "bottom": "10%",
        "display": "block",
        "height": "100px",
        "left": "10%",
        "right": "10%",
        "top": "10%",
        "width": "100px",
      },
      "l": Object {
        "bottom": "13%",
        "height": "103px",
        "left": "13%",
        "right": "13%",
        "top": "13%",
        "width": "103px",
      },
      "label": "Background layer wrapper",
      "m": Object {
        "bottom": "14%",
        "height": "104px",
        "left": "14%",
        "right": "14%",
        "top": "14%",
        "width": "104px",
      },
      "s": Object {
        "bottom": "15%",
        "height": "105px",
        "left": "15%",
        "right": "15%",
        "top": "15%",
        "width": "105px",
      },
      "xl": Object {
        "bottom": "12%",
        "height": "102px",
        "left": "12%",
        "right": "12%",
        "top": "12%",
        "width": "102px",
      },
      "xs": Object {
        "bottom": "16%",
        "height": "106px",
        "left": "16%",
        "right": "16%",
        "top": "16%",
        "width": "106px",
      },
      "xxl": Object {
        "bottom": "11%",
        "height": "101px",
        "left": "11%",
        "right": "11%",
        "top": "11%",
        "width": "101px",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child pattern image": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 svg *": Object {
    "shape": Object {
      "g": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-3,155,155,155),0.37)",
      },
      "label": "Icon background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-3,155,155,155),0.37)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-7,8,18,25),0.37)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-7,8,18,25),0.37)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-2,242,249,253),0.37)",
      },
    },
  },
  "maxi-test:hover > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test:hover > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "shape": Object {
      "g": Object {
        "bottom": "11%",
        "height": "101px",
        "left": "11%",
        "right": "11%",
        "top": "11%",
        "width": "101px",
      },
      "l": Object {
        "bottom": "14%",
        "height": "104px",
        "left": "14%",
        "right": "14%",
        "top": "14%",
        "width": "104px",
      },
      "label": "Background layer wrapper",
      "m": Object {
        "bottom": "15%",
        "height": "105px",
        "left": "15%",
        "right": "15%",
        "top": "15%",
        "width": "105px",
      },
      "s": Object {
        "bottom": "16%",
        "height": "106px",
        "left": "16%",
        "right": "16%",
        "top": "16%",
        "width": "106px",
      },
      "xl": Object {
        "bottom": "13%",
        "height": "103px",
        "left": "13%",
        "right": "13%",
        "top": "13%",
        "width": "103px",
      },
      "xs": Object {
        "bottom": "17%",
        "height": "107px",
        "left": "17%",
        "right": "17%",
        "top": "17%",
        "width": "107px",
      },
      "xxl": Object {
        "bottom": "12%",
        "height": "102px",
        "left": "12%",
        "right": "12%",
        "top": "12%",
        "width": "102px",
      },
    },
  },
  "maxi-test:hover > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child": Object {
    "shape": Object {},
  },
  "maxi-test:hover > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child pattern image": Object {
    "shape": Object {},
  },
  "maxi-test:hover > .maxi-background-displayer .maxi-background-displayer__0 svg *": Object {
    "shape": Object {
      "g": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),0.92)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),0.92)",
      },
      "label": "Icon background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),0.92)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-8,150,176,203),0.92)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),0.92)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-8,150,176,203),0.92)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-3,155,155,155),0.17)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for video layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "video": Object {
      "g": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "bottom": "10%",
        "display": "block",
        "height": "100px",
        "left": "10%",
        "opacity": 0.11,
        "right": "10%",
        "top": "10%",
        "width": "100px",
      },
      "l": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "bottom": "13%",
        "height": "103px",
        "left": "13%",
        "opacity": 0.65,
        "right": "13%",
        "top": "13%",
        "width": "103px",
      },
      "label": "Background layer wrapper",
      "m": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "bottom": "14%",
        "height": "104px",
        "left": "14%",
        "opacity": 0.65,
        "right": "14%",
        "top": "14%",
        "width": "104px",
      },
      "s": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "bottom": "15%",
        "height": "105px",
        "left": "15%",
        "opacity": 0.25,
        "right": "15%",
        "top": "15%",
        "width": "105px",
      },
      "xl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "bottom": "12%",
        "height": "102px",
        "left": "12%",
        "opacity": 0.11,
        "right": "12%",
        "top": "12%",
        "width": "102px",
      },
      "xs": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "bottom": "16%",
        "height": "106px",
        "left": "16%",
        "opacity": 0.9,
        "right": "16%",
        "top": "16%",
        "width": "106px",
      },
      "xxl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-IMG_9344-scaled-1.jpg)",
        "background-size": "cover",
        "bottom": "11%",
        "height": "101px",
        "left": "11%",
        "opacity": 0.37,
        "right": "11%",
        "top": "11%",
        "width": "101px",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for video layer with different values on different responsive stages and hovers 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "video": Object {
      "g": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "bottom": "10%",
        "display": "block",
        "height": "100px",
        "left": "10%",
        "opacity": 0.11,
        "right": "10%",
        "top": "10%",
        "width": "100px",
      },
      "l": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "bottom": "13%",
        "height": "103px",
        "left": "13%",
        "opacity": 0.65,
        "right": "13%",
        "top": "13%",
        "width": "103px",
      },
      "label": "Background layer wrapper",
      "m": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "bottom": "14%",
        "height": "104px",
        "left": "14%",
        "opacity": 0.65,
        "right": "14%",
        "top": "14%",
        "width": "104px",
      },
      "s": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "bottom": "15%",
        "height": "105px",
        "left": "15%",
        "opacity": 0.25,
        "right": "15%",
        "top": "15%",
        "width": "105px",
      },
      "xl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "bottom": "12%",
        "height": "102px",
        "left": "12%",
        "opacity": 0.11,
        "right": "12%",
        "top": "12%",
        "width": "102px",
      },
      "xs": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "bottom": "16%",
        "height": "106px",
        "left": "16%",
        "opacity": 0.9,
        "right": "16%",
        "top": "16%",
        "width": "106px",
      },
      "xxl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-IMG_9344-scaled-1.jpg)",
        "background-size": "cover",
        "bottom": "11%",
        "height": "101px",
        "left": "11%",
        "opacity": 0.37,
        "right": "11%",
        "top": "11%",
        "width": "101px",
      },
    },
  },
  "maxi-test:hover > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test:hover > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "video": Object {
      "g": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "bottom": "11%",
        "height": "101px",
        "left": "11%",
        "opacity": 0.82,
        "right": "11%",
        "top": "11%",
        "width": "101px",
      },
      "l": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "bottom": "14%",
        "height": "104px",
        "left": "14%",
        "opacity": 0.82,
        "right": "14%",
        "top": "14%",
        "width": "104px",
      },
      "label": "Background layer wrapper",
      "m": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "bottom": "15%",
        "height": "105px",
        "left": "15%",
        "opacity": 0.06,
        "right": "15%",
        "top": "15%",
        "width": "105px",
      },
      "s": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "bottom": "16%",
        "height": "106px",
        "left": "16%",
        "opacity": 1,
        "right": "16%",
        "top": "16%",
        "width": "106px",
      },
      "xl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "bottom": "13%",
        "height": "103px",
        "left": "13%",
        "opacity": 0.82,
        "right": "13%",
        "top": "13%",
        "width": "103px",
      },
      "xs": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "bottom": "17%",
        "height": "107px",
        "left": "17%",
        "opacity": 1,
        "right": "17%",
        "top": "17%",
        "width": "107px",
      },
      "xxl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-IMG_9344-scaled-1.jpg)",
        "background-size": "cover",
        "bottom": "12%",
        "height": "102px",
        "left": "12%",
        "opacity": 0.21,
        "right": "12%",
        "top": "12%",
        "width": "102px",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles when border attributes are default, so the source is the normal attributes 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {
        "border-bottom-style": "solid",
        "border-bottom-width": "2px",
        "border-color": "rgba(var(--maxi-light-color-2,242,249,253),1)",
        "border-left-style": "solid",
        "border-left-width": "2px",
        "border-right-style": "solid",
        "border-right-width": "2px",
        "border-top-style": "solid",
        "border-top-width": "2px",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {
        "border-bottom-width": "2px",
        "border-left-width": "2px",
        "border-right-width": "2px",
        "border-top-width": "2px",
      },
      "xs": Object {},
      "xxl": Object {
        "border-bottom-width": "4px",
        "border-left-width": "4px",
        "border-right-width": "4px",
        "border-top-width": "4px",
      },
    },
    "size": Object {
      "g": Object {
        "bottom": "-2px",
        "left": "-2px",
        "right": "-2px",
        "top": "-2px",
      },
      "xl": Object {
        "bottom": "-2px",
        "left": "-2px",
        "right": "-2px",
        "top": "-2px",
      },
      "xxl": Object {
        "bottom": "-4px",
        "left": "-4px",
        "right": "-4px",
        "top": "-4px",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__1": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
    },
  },
  "maxi-test:hover > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {
        "border-color": "rgba(var(--maxi-light-color-6,201,52,10),0)",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test:hover > .maxi-background-displayer .maxi-background-displayer__1": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles when hover status is disabled, but hover attributes are set 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "bottom": "10%",
        "display": "block",
        "height": "100px",
        "left": "10%",
        "right": "10%",
        "top": "10%",
        "width": "100px",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),0.3)",
        "bottom": "13%",
        "height": "103px",
        "left": "13%",
        "right": "13%",
        "top": "13%",
        "width": "103px",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-5,0,0,0),0.59)",
        "bottom": "14%",
        "height": "104px",
        "left": "14%",
        "right": "14%",
        "top": "14%",
        "width": "104px",
      },
      "s": Object {
        "background-color": "rgba(204,68,68,0.59)",
        "bottom": "15%",
        "height": "105px",
        "left": "15%",
        "right": "15%",
        "top": "15%",
        "width": "105px",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "bottom": "12%",
        "height": "102px",
        "left": "12%",
        "right": "12%",
        "top": "12%",
        "width": "102px",
      },
      "xs": Object {
        "background-color": "rgba(204,68,68,0.59)",
        "bottom": "16%",
        "height": "106px",
        "left": "16%",
        "right": "16%",
        "top": "16%",
        "width": "106px",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-2,242,249,253),0.2)",
        "bottom": "11%",
        "height": "101px",
        "left": "11%",
        "right": "11%",
        "top": "11%",
        "width": "101px",
      },
    },
  },
  "maxi-test:hover > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles when most border attributes are default, so the source is the normal attributes and the one different 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {
        "border-bottom-style": "solid",
        "border-bottom-width": "2px",
        "border-color": "rgba(var(--maxi-light-color-2,242,249,253),1)",
        "border-left-style": "solid",
        "border-left-width": "2px",
        "border-right-style": "solid",
        "border-right-width": "2px",
        "border-top-style": "solid",
        "border-top-width": "2px",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {
        "border-bottom-width": "2px",
        "border-left-width": "2px",
        "border-right-width": "2px",
        "border-top-width": "2px",
      },
      "xs": Object {},
      "xxl": Object {
        "border-bottom-width": "4px",
        "border-left-width": "4px",
        "border-right-width": "4px",
        "border-top-width": "4px",
      },
    },
    "size": Object {
      "g": Object {
        "bottom": "-2px",
        "left": "-2px",
        "right": "-2px",
        "top": "-2px",
      },
      "xl": Object {
        "bottom": "-2px",
        "left": "-2px",
        "right": "-2px",
        "top": "-2px",
      },
      "xxl": Object {
        "bottom": "-4px",
        "left": "-4px",
        "right": "-4px",
        "top": "-4px",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__1": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
    },
  },
  "maxi-test:hover > .maxi-background-displayer": Object {
    "border": Object {
      "g": Object {
        "border-color": "rgba(var(--maxi-light-color-6,201,52,10),0)",
        "border-top-width": "3px",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
    "size": Object {
      "g": Object {
        "top": "-3px",
      },
    },
  },
  "maxi-test:hover > .maxi-background-displayer .maxi-background-displayer__1": Object {
    "color": Object {
      "g": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct simple background styles 1`] = `
Object {
  "background": Object {
    "g": Object {
      "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.39)",
    },
    "l": Object {
      "background": "linear-gradient(135deg,rgba(6,147,227,0.29) 0%,rgba(73,131,156,0.29) 39%,rgba(155,81,224,0.29) 100%)",
    },
    "label": "Background gradient",
    "m": Object {
      "background-color": "rgba(var(--maxi-light-color-4,255,74,23),0.39)",
    },
    "s": Object {
      "background-color": "rgba(43,43,179,0.39)",
    },
    "xl": Object {
      "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.39)",
    },
    "xs": Object {
      "background": "linear-gradient(135deg,rgba(6,147,227,0.29) 0%,rgba(73,131,156,0.29) 39%,rgba(102,186,223,0.29) 67%,rgba(155,81,224,0.29) 100%)",
    },
    "xxl": Object {
      "background-color": "rgba(var(--maxi-light-color-2,242,249,253),0.39)",
    },
  },
}
`;
